--- a/src/app/locales/ru/translation.json
+++ b/src/app/locales/ru/translation.json
@@ -26,7 +26,9 @@
     "txt_filter_1": "По времени",
     "txt_filter_2": "По рейтингу",
     "txt_error_http": "Ошибка загрузки!",
-    "txt_warning_articles":"У Вас нет публикаий. Перейдите в раздел создания темы",
+    "txt_warning_articles":"У Вас нет публикаций. Перейдите в раздел создания темы",
+    "txt_warning_articles_mod":"У Вас нет статей на модерации",
+    "txt_warning_articles_edit":"У Вас нет редоктируемых статей",
     "txt_bookmark": "Закладки",
     "txt_welcome": "Добро пожаловать",
     "txt_at_first": "Впервые на форуме?",
