--- a/src/app/locales/en/translation.json
+++ b/src/app/locales/en/translation.json
@@ -61,6 +61,7 @@
   "message_email": "Email",
   "message_login": "Login",
   "input_p": "Paragraph",
+  "input_preview":"Img Preview name",
   "input_il": "Image link",
   "input_title": "Title",
   "input_description": "Title",
