--- a/src/app/locales/ru/translation.json
+++ b/src/app/locales/ru/translation.json
@@ -23,12 +23,14 @@
     "btn_signin":"Войти",
     "btn_complaint":"Пожаловаться",
     "btn_read_more":"Читать далее",
+    "btn_moderation":"Отправить на модерацию",
     "txt_filter_1": "По времени",
     "txt_filter_2": "По рейтингу",
     "txt_error_http": "Ошибка загрузки!",
     "txt_warning_articles":"У Вас нет публикаций. Перейдите в раздел создания темы",
     "txt_warning_articles_mod":"У Вас нет статей на модерации",
     "txt_warning_articles_edit":"У Вас нет редоктируемых статей",
+    "txt_post_search_warning":"Воспользуйтесь поиском изображений для нахождения нужной статьи",
     "txt_bookmark": "Закладки",
     "txt_welcome": "Добро пожаловать",
     "txt_at_first": "Впервые на форуме?",
@@ -44,6 +46,8 @@
     "txt_complaint":"Жалоба отправлена",
     "txt_complaint_error":"Не удалось отправить",
     "txt_subscription_warn":"Нет подписок",
+    "txt_del_sandbox":"Удаление шаблона статьи",
+    "txt_del_sandbox_warn":"Вы действительно хотите удалить все?",
     "txt_is_auth":"Уже есть аккаунт?",
     "txt_no_followers":"Нет подписчиков",
     "txt_complaint_title":"Жалоба",
@@ -91,5 +95,18 @@
     "auth_warn4":"Логин должен содержать только латинские буквы и _ ",
     "auth_warn5":"Пароль должен содержать только латинские буквы либо цифры и #!? ",
     "logout":"Выйти",
-    "login":"Вход"
+    "login":"Вход",
+    "posts":"Посты",
+    "article_creation":"Создание статьи",
+    "enter_theme_name":"Введите название темы",
+     "select_hub":"Выберите хаб",
+     "key_words":"Ключевые слова",
+     "name":"Название",
+     "load_article_preview_btn":"Загрузить превью статьи",
+     "chooseFile":"Выберите файл",
+     "part":"Раздел",
+     "paragraph":"Абзац",
+     "chapter":"Заголовок",
+     "img":"Изображение",
+     "img_load":"Загрузить изображение"
 }
