fix error messages and internalization, refactoring admin panel link

--- a/src/app/locales/en/translation.json
+++ b/src/app/locales/en/translation.json
@@ -6,6 +6,7 @@
   "btn_undo": "Undo",
   "btn_back": "Back",
   "btn_add": "Add",
+  "btn_run":"Perform",
   "btn_auth": "Authorization",
   "btn_subscribe": "Subscribe",
   "btn_unsubscribe": "Unsubscribe",
@@ -19,6 +20,7 @@
   "btn_unblock": "Unblock",
   "btn_edit": "Edit",
   "btn_send": "Send",
+  "btn_del_acc":"Delete account",
   "btn_unfollow": "Unfollow",
   "btn_signup": "Sign up",
   "btn_signin": "Sign in",
@@ -75,9 +77,11 @@
   "modal_title_1": "Delete paragraph",
   "modal_title_2": "Delete image",
   "modal_title_3": "Delete title",
+  "modal_title_4":"Are you sure you want to delete your account?",
   "modal_body_1": "Do you really want to delete the paragraph with the text?",
   "modal_body_2": "Do you really want to delete the image?",
   "modal_body_3": "Do you really want to delete the image?",
+  "modal_body_4":"All your data will be deleted.",
   "alt_error": "Failed to load image!",
   "select_title": "Part of the article",
   "lng_ru": "Russian",
@@ -106,7 +110,10 @@
     "paragraph":"Paragraph",
     "chapter":"Chapter",
     "img":"Image",
-    "img_load":"Upload image"
+    "img_load":"Upload image",
+    "on_moderation":"On moderation",
+    "on_edit":"On edition",
+    "published":"Published"
 
 
 }
