--- a/src/app/locales/ru/translation.json
+++ b/src/app/locales/ru/translation.json
@@ -5,6 +5,7 @@
     "btn_reset": "Сбросить",
     "btn_undo":"Отменить",
     "btn_back": "Назад",
+    "btn_run":"Выполнить",
     "btn_add":"Добавить",
     "btn_auth": "Авторизация",
     "btn_subscribe": "Подписаться",
@@ -24,6 +25,7 @@
     "btn_complaint":"Пожаловаться",
     "btn_read_more":"Читать далее",
     "btn_moderation":"Отправить на модерацию",
+    "btn_del_acc":"Удалить аккаунт",
     "txt_filter_1": "По времени",
     "txt_filter_2": "По рейтингу",
     "txt_error_http": "Ошибка загрузки!",
@@ -77,9 +79,11 @@
     "modal_title_1": "Удаление абазаца",
     "modal_title_2": "Удаление изображения",
     "modal_title_3": "Удаление заголовка",
+    "modal_title_4":"Вы действительно хотите удалить свой аккаунт?",
     "modal_body_1": "Вы действительно хотите удалить абзац с текстом?",
     "modal_body_2": "Вы действительно хотите удалить изображение?",
     "modal_body_3": "Вы действительно хотите удалить изображение?",
+    "modal_body_4":"Все ваши данные будут удалены",
     "alt_error": "Не удалось загрузить изображение!",
     "select_title": "Часть статьи",
     "lng_ru":"Русский",
@@ -108,5 +112,8 @@
      "paragraph":"Абзац",
      "chapter":"Заголовок",
      "img":"Изображение",
-     "img_load":"Загрузить изображение"
+     "img_load":"Загрузить изображение",
+     "on_moderation":"На модерации",
+     "on_edit":"Редактирование",
+     "published":"Опубликованы"
 }
